--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
             <div class="container">
             <h2 class="what-do-title">Чем мы занимаемся</h2>
             <ul class="what-do-list">
-                <li class="do-img"><img class="" src="./images/what-we-do-sec/img.jpg" alt="руки печатают на клавиатуре" width="370" height="294">
+                <li class="do-img"><div class="what-do-thumb">
+                    <img class="" src="./images/what-we-do-sec/img.jpg" alt="руки печатают на клавиатуре" width="370" height="294"><div class="paragraf-container"><p class="what-do-posttitle">Десктопные приложения</p></div></div>
                 </li>
-                <li class="do-img"><img class="" src="./images/what-we-do-sec/box2.jpg"
+                <li class="do-img"><div class="what-do-thumb">
+                    <img class="" src="./images/what-we-do-sec/box2.jpg"
                         alt="девушка левой рукой держит смартфон,а правой печатает на ноутбуке" width="370"
-                        height="294"></li>
-                <li class="do-img"><img class="" src="./images/what-we-do-sec/img1.jpg"
+                        height="294"><div class="paragraf-container"><p class="what-do-posttitle">Мобильные приложения</p></div></div></li>
+                <li class="do-img"><div class="what-do-thumb">
+                    <img class="" src="./images/what-we-do-sec/img1.jpg"
                         alt="человек держит планшет в руке, на котором нарисованы соты разных цветов" width="370"
-                        height="294"></li>
+                        height="294"><div class="paragraf-container"><p class="what-do-posttitle">Дизайнерские решения</p></div></div></li>
             </ul>
             </div>
         </section>
