--- a/portfolio.html
+++ b/portfolio.html
@@ -54,91 +54,117 @@
         </ul>
         <ul class="projects-list">
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img.jpg" 
                 alt="на ноутбуке открыты резюмэ сотрудников"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="title-container">
                 <h2 class="projects-title">Технокряк</h2>
                 <p class="projects-posttitle">Веб-сайт</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img1.jpg" 
                 alt="два баскетболиста в прыжке"
                 width="370"
-                height="294"> <div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam quas modi fugiat voluptate doloremque voluptatibus possimus aliquam blanditiis nihil aspernatur culpa atque, velit nam ipsum quae. Deserunt officiis dolorem officia!</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title">Постер <span lang="en" class="projects-title">Orlean vs Golden Star</span></h2>
                 <p class="projects-posttitle">Дизайн</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img2.jpg" 
                 alt="логотип ресторана"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, mollitia provident voluptates ea esse deleniti labore perferendis repellat delectus quod maiores at laboriosam, aut odio odit ullam? Unde, atque delectus!</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title">Ресторан <span lang="en" class="projects-title">Seafood</span></h2>
                 <p class="projects-posttitle">Приложение</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img3.jpg" 
                 alt="внешние беспроводные наушники"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur, enim aliquid dolore ducimus veniam obcaecati rerum at soluta, minus officia fuga velit nisi eius quaerat labore atque quibusdam iusto.</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title">Проект <span lang="en" class="projects-title">Prime</span> </h2>
                 <p class="projects-posttitle">Маркетинг</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img4.jpg" 
                 alt="две картонные коробки, белая и коричневая"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae magnam aliquid ex voluptas in dicta deserunt minima illum, voluptatum saepe distinctio, deleniti ut libero cum, pariatur nobis fuga dolor dolorum.</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title">Проект <span lang="en" class="projects-title">Boxes</span></h2>
                 <p class="projects-posttitle">Приложение</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img5.jpg" 
                 alt="монитор, на котором карта плоской земли"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis laudantium aliquid autem doloribus, ipsam et? Temporibus animi, sint molestias odio consequuntur minus. Recusandae, quia. Iure neque exercitationem autem quisquam laudantium!</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title" lang="en"> Inspiration has no Borders</h2>
                 <p class="projects-posttitle">Веб-сайт</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img6.jpg" 
                 alt="открытая книга"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fuga in nihil molestiae praesentium vel maiores labore velit dolores repudiandae cumque eos cum, deserunt aliquid, quia perspiciatis. Beatae, iste veritatis!</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title">Издание <span class="projects-title" lang="en">Limited Edition</span> </h2>
                 <p class="projects-posttitle">Дизайн</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img7.jpg" 
                 alt="ярлык с натписью"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum id voluptas sunt fugit! Non, praesentium atque porro facere vitae accusamus ut. Delectus quo nulla deleniti veritatis tempora, earum aliquam dolore.</p>
+                </div>
+                <div class="title-container">
                 <h2 class="projects-title"> Проект <span lang="en" class="projects-title">LAB</span> </h2>
                 <p class="projects-posttitle">Маркетинг</p></div>
                 </a>
             </li>
             <li class="projects-item">
+                <div class="projects-thump">
                 <a href="" class="projects-link">
                 <img class="image" src="./images/portfolio-img/img8.jpg" 
                 alt="руки печатают на ноутбуке"
                 width="370"
-                height="294"><div class="title-container">
+                height="294"><p class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor quae vero dolore, at quam, mollitia illo consequatur, adipisci placeat ducimus molestiae distinctio obcaecati magni. Debitis officia minima doloribus corrupti atque!</p></div>
+                <div class="title-container">
                 <h2 class="projects-title" lang="en"> Growing Business</h2>
                 <p class="projects-posttitle">Приложение</p></div>
                 </a>
