--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="hero-section">
             <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
+            <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
         </section>
         <!--переваги -->
         <section class="section">
@@ -277,6 +277,14 @@
         </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn" data-modal-close><svg class="modal-icon" width="11" height="11">
+                <use href="./images/icons.svg#icon-Vector"></use>
+            </svg></button>
+        </div>
+    </div>
+    <script src="./modal.js"></script>
 </body>
 
 </html>
